# sand

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  server.sh
.github/workflows/: ci.yml
container/: Dockerfile  docker-compose.example.yml
examples/: highest_mountains_in_vn_en.csv
extensions/sand_drepr/: pyproject.toml
extensions/sand_drepr/sand_drepr/: dreprmodel.py  main.py  resources.py  semanticmodel.py  transformation.py
extensions/sand_drepr/sand_drepr/drepr-old/: main.py  resources.py  semanticmodel.py
extensions/sand_drepr/sand_drepr/raw_transformations/: decimal_number.py  integer_number.py
extensions/sand_grams/: pyproject.toml
extensions/sand_grams/sand_grams/: main.py
libraries/drepr/spec/: __init__.py
sand/: __init__.py  __main__.py  app.py  cli.py  client.py  config.bk  config.default.yml  config.py  container.py  deserializer.py  serde.py  serializer.py
sand/commands/: load.py
sand/controllers/: assistant.py  base.py  project.py  search.py  settings.py  table.py  transform.py  transformation.py
sand/controllers/helpers/: upload.py
sand/extension_interface/: assistant.py  export.py  search.py  transformation.py
sand/extensions/: __init__.py  wikidata.py
sand/extensions/assistants/: mtab.py
sand/extensions/drepr/: relational2rdf.py
sand/extensions/export/drepr/: main.py  resources.py  semanticmodel.py
sand/extensions/search/: aggregated_search.py  default_search.py  wikidata_search.py
sand/helpers/: dependency_injection.py  mapping_utils.py  namespace.py  service_provider.py  tree_utils.py
sand/models/: __init__.py  base.py  entity.py  ontology.py  project.py  search.py  semantic_model.py  table.py  table.pyi  transform.py  transformation.py  uploading_table.py.deprecated
sand/plugins/: drepr.py  grams_plugin.py  mtab.py  wikidata.py
sand/plugins/drepr/: relational2rdf.py  resources.py  semanticmodel.py  transformation.py
sand/plugins/drepr/raw_transformations/: number.py
sand/www/: asset-manifest.json  index.html  manifest.json
sand/www/static/css/: 2.6bd2b176.chunk.css  2.6bd2b176.chunk.css.map  2.b3380b9b.chunk.css.map
sand/www/static/js/: 2.6d246049.chunk.js  2.84d4e8a3.chunk.js  2.84d4e8a3.chunk.js.LICENSE.txt  2.a6f3990e.chunk.js  3.5b69f166.chunk.js  3.5b69f166.chunk.js.map  (+13 more)
sand_scripts/: predefined_datasets.py
smc/: api.py  app.py  cli.py  client.py  config.py  deserializer.py  restful.py  serializer.py  webapp.py
smc/controllers/: assistant.py  auto.py  entity.py  project.py  semantic_model.py  settings.py  table.py
smc/controllers/helpers/: upload.py
smc/models/: __init__.py  base.py  entity.py  ontology.py  project.py  semantic_model.py  table.py
smc/plugins/: drepr.py  grams.py  mtab.py  wikidata.py
smc/www/: asset-manifest.json  index.html  package.json
smc/www/atmp/: AddNodeForm.tsx  EditLiteralNodeForm.tsx  SemanticModel.tsx
smc/www/src/: App.tsx  env.ts
tests/: conftest.py  test_api.py  test_transform_api.py  test_transformation_api.py
tests/resources/: config.test.yml
tests/resources/data/: make.ipynb
www/: .gitignore  package.json  tsconfig.json
www/.yalc/rma-baseapp/: README.md  package.json  yalc.sig
www/atmp/: AddEdgeForm.tsx  EditClassNodeForm.tsx  EditDataNodeForm.tsx  EditEdgeForm.tsx  G6Graph.ts
www/public/: index.html
www/scripts/: build.py
www/src/: App.css  index.css  index.tsx  library.ts  routes.tsx
www/src/components/: G6Graph.ts  NavBar.tsx  Navbar.tsx  Table.tsx  index.ts
www/src/misc/: SequentialFuncInvoker.ts  index.ts  memo.ts
www/src/models/: AssistantService.ts  Entity.ts  Project.ts  Table.ts  index.ts
www/src/pages/: HomePage.tsx  LoadingPage.tsx  ProjectPage.tsx  SettingPage.tsx  index.ts
www/src/routing/: index.ts
(+223 files in other folders)
