[tool.poetry]
name = "web-sand"
version = "3.1.2"
description = "UI for browsing/editing semantic descriptions"
authors = ["Binh Vu <binh@toan2.com>"]
repository = "https://github.com/usc-isi-i2/sand"
license = "MIT"
packages = [{ include = "sand" }]
readme = "README.md"
include = ["sand/www/**/*"]

[tool.poetry.scripts]
sand = 'sand.__main__:cli'

[tool.poetry.dependencies]
# restricting the upper bound python version to 3.12, due to RestrictedPython dependency.
python = ">=3.8,<3.12"
kgdata = "^5.3.5"
sem-desc = "^5.1.0"
peewee = "^3.15.2"
Flask = "^2.2.2"
python-dotenv = ">= 0.19.0, < 0.20.0"
tornado = "^6.2"
gena = "^1.6.4"
loguru = "^0.6.0"
orjson = ">= 3.9.0, < 4.0.0"
drepr = "^2.10.0"
rsoup = "^3.0.2"
nh3 = "^0.2.13"
RestrictedPython = "^6.1"

lat_lon_parser = "^1.3.0"
dependency-injector = "^4.41.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
