[tool.poetry]
name = "web-sand"
version = "4.2.1"
description = "UI for browsing/editing semantic descriptions"
authors = ["Binh Vu <binh@toan2.com>"]
repository = "https://github.com/usc-isi-i2/sand"
license = "MIT"
packages = [{ include = "sand" }]
readme = "README.md"
include = ["sand/www/**/*"]

[tool.poetry.scripts]
sand = 'sand.__main__:cli'

[tool.poetry.dependencies]
python = ">= 3.10, < 3.14"
kgdata = "^7.0.4"
sem-desc = "^6.12.0"
peewee = "^3.15.2"
Flask = "^2.2.2"
python-dotenv = ">= 0.19.0, < 0.20.0"
tornado = "^6.2"
gena = "^1.7.0"
loguru = "^0.7.0"
orjson = ">= 3.9.0, < 4.0.0"
rsoup = "^3.1.7"
nh3 = "^0.2.13"

# we should make restricted python optional as it uses ZPL license
RestrictedPython = "^7.1"

lat_lon_parser = "^1.3.0"
dependency-injector = "^4.41.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
