[tool.poetry]
name = "sand-drepr"
version = "1.0.2"
description = "SAND & DRepr Integration"
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
drepr-v2 = "^1.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
